[package]
name = "babylon"
version = "0.0.15"
authors = ["Richard Anaya"]
edition = "2021"
description = "A wrapper for Babylon.js"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/richardanaya/babylon"
readme="README.md"

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = {version = "0.3.61", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "console"
]}
wasm-bindgen-futures = "0.4.34"
