[package]
name = "neo-babylon"
version = "0.1.9"
authors = ["Gordon Stein"]
edition = "2021"
description = "A wasm-bindgen-based wrapper for Babylon.js"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/gsteinLTU/babylon.rs"
readme = "README.md"
exclude = [".github"]

[dependencies]
wasm-bindgen = "~0.2.84"
js-sys = "~0.3.61"
web-sys = { version = "~0.3.61", features = ["Document", "Element", "HtmlElement", "Node", "Window", "console", "Navigator", "XrSystem"] }
wasm-bindgen-futures = "~0.4.34"
impl_ops = "~0.1.1"
