[package]
name = "example"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babylon = {path="../../"}
js-sys = "0.3.61"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["console"] }

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
